--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@ seo:
   social_image: 
   hide-from-google: true
 header:
- - image:
+ - image: /images/temp-img.jpg
    position: 
    label: 
+   title: AJ Hackett International
+   text: Every day, do something that reminds you that you’re still alive.
 ---
+
