--- a/meet-aj-hackett.html
+++ b/meet-aj-hackett.html
@@ -28,8 +28,8 @@ quote-image: /images/temp-img.jpg
         <p class="title-font text-4xl"> AJ Hackett is the kiwi innovator who built a business empire on adrenaline and adventure. </p>
     </div>
 
-    <div>
-        <p> From a day in 1987 when he launched himself into the world's eye by leaping off the Eiffel Tower with a rubber cord attached to his feet, AJ has gone on to become one of New Zealand's most visible and unique entrepreneurs.
+    <div class="pr-5p">
+        <p> From a day in 1987 when he launched himself into the world's eye by leaping off the Eiffel Tower with a rubber cord attached to his feet, AJ Hackett has gone on to become one of New Zealand's most visible and unique entrepreneurs.
         </p>
     </div>
 
@@ -63,28 +63,4 @@ quote-image: /images/temp-img.jpg
 
 
 
-<!-----Timeline-------->
 
-<section class="px-5p grid grid-cols-3 pt-10p">
-
-    <div class="col-span-full pb-5p">
-        <p class="title-font text-4xl"> The Timeline of AJ Hackett International </p>
-    </div>
-
-    <div class="col-span-full">
-        <p class="pb-2p">AJ Hackett International has pioneered adventure tourism for over 35 years led by AJ Hackett, however, it all started in January 1980 with a <strong>PELORUS BRIDGE TEST JUMP</strong>. Chris Sigglekow had heard about the Oxford University students who'd pulled off a similar stunt in Bristol, England. With a borrowed parachute harness and a bit of cord cut to a random length, Chris flung himself off the Pelorus Bridge. His jump didn't quite work out—he went straight into the water feet first and pretty much at full speed before the cord took his weight! In November 1986, AJ took his first jump at the <strong>GREENHITHE BRIDGE</strong>, a 19-meter drop over Auckland's Waitemata Harbour. Following this, on 26 June 1987, AJ successfully introduced the world to bungy jumping with a jump off the <strong>EIFFEL TOWER</strong>. In 1988, things got serious with the opening of the AJ Hackett Bungy site in Ohakune, New Zealand as the world's first commercial bungy site, and then on 12 November 1988, the opening of the world's first year-round commercial public bungy site at the Kawarau Bridge in Queenstown, New Zealand.</p>
-        <p class="pb-2p"> Other key milestones have included: </p>
-    </div>
-
-    <div class="col-span-1">
-        <p class="title-font text-4xl">1988</p>
-    </div>
-    <div class="col-span-2">
-        <p class="title-font text-2xl pb-2p">New Zealand Stock Exchange Building</p>
-        <p>AJ jumps from the Auckland Stock Exchange Building, the world's first bungy jump from a building.</p>
-    </div>
-
-    
-
-
-</section>
