--- a/meet-aj-hackett.html
+++ b/meet-aj-hackett.html
@@ -22,19 +22,40 @@ quote-image: /images/temp-img.jpg
 
 <!-----Intro Section and Text-------->
 
-<section class="px-5p grid grid-cols-2 pt-10p">
+<section class="px-5p pt-10p">
 
-    <div class="col-span-full pb-10p">
+    <div class="pb-10p">
         <p class="title-font text-4xl"> AJ Hackett is the kiwi innovator who built a business empire on adrenaline and adventure. </p>
     </div>
 
-    <div class="pr-5p">
-        <p> From a day in 1987 when he launched himself into the world's eye by leaping off the Eiffel Tower with a rubber cord attached to his feet, AJ Hackett has gone on to become one of New Zealand's most visible and unique entrepreneurs.
-        </p>
+    <div class="grid grid-cols-2 mb-5p">
+        <div class="pr-5p">
+            <p> From a day in 1987 when he launched himself into the world's eye by leaping off the Eiffel Tower with a rubber cord attached to his feet, AJ Hackett has gone on to become one of New Zealand's most visible and unique entrepreneurs.
+            </p>
+        </div>
+        <div class="relative h-full min-h-30 sm:min-h-50">
+            <img class="absolute inset-0 w-full h-full object-cover rounded-3xl" src="{{ page.image-1 }}" style="object-position: {{ page.image-1-position }};" alt="{{ page.image-1-alt }}" />
+        </div>
+    </div>
+    
+    <div class="grid grid-cols-2 mb-5p">
+        <div class="relative h-full min-h-30 sm:min-h-50">
+            <img class="absolute inset-0 w-full h-full object-cover rounded-3xl" src="{{ page.image-1 }}" style="object-position: {{ page.image-1-position }};" alt="{{ page.image-1-alt }}" />
+        </div>
+        <div class="pl-5p">
+            <p> The bungy jumping industry that he started has opened bold new avenues for tourism and has expanded the minds of millions of people worldwide. AJ’s personal life and business philosophies match his have-a-go ethos. Aptly, for a man who made his name encouraging others to jump off bridges, AJ is drawn to risk and has developed a knack for managing danger to create a safe and predictable environment for bungy jumpers.
+            </p>
+        </div>
     </div>
 
-    <div class="relative h-full min-h-30 sm:min-h-50">
-        <img class="absolute inset-0 w-full h-full object-cover rounded-3xl" src="{{ page.image-1 }}" style="object-position: {{ page.image-1-position }};" alt="{{ page.image-1-alt }}" />
+    <div class="grid grid-cols-2 mb-5p">
+        <div class="pr-5p">
+            <p> In the commercial world, he has always preferred to leap boldly rather than to hold back. This has led to some hard lessons. The same taste for adventure that excited AJ as a child still drives the man today as he looks for new challenges and as his business moves into a period of unique growth and change.
+            </p>
+        </div>
+        <div class="relative h-full min-h-30 sm:min-h-50">
+            <img class="absolute inset-0 w-full h-full object-cover rounded-3xl" src="{{ page.image-1 }}" style="object-position: {{ page.image-1-position }};" alt="{{ page.image-1-alt }}" />
+        </div>
     </div>
 
 </section>
