--- a/experiences-aj-hackett.html
+++ b/experiences-aj-hackett.html
@@ -22,6 +22,17 @@ experience:
    image: /images/temp-img.jpg
    image-position: center
    image-alt: "Bungy Jump"
+   gallery-images:
+   - img-url: /images/temp-img.jpg
+     img-alt:
+   - img-url: /images/temp-img.jpg
+     img-alt:
+   - img-url: /images/temp-img.jpg
+     img-alt:
+   - img-url: /images/temp-img.jpg
+     img-alt:
+   - img-url: /images/temp-img.jpg
+     img-alt:
    locations: 
    - name: "Cairns"
      url: "https://example.com/cairns"
@@ -29,7 +40,182 @@ experience:
    - name: "Sentosa"
      url: "https://example.com/sentosa"
      url-alt: "Visit Sentosa"
-     description: "Inspired by the Vanuatu ritual called land diving and the Oxford University Dangerous Sports Club’s experimental jumps in the 1970s, AJ and fellow adventurer Chris Sigglekow sought ways to make bungy jumping safe. By the mid-80s, AJ had created a super-stretchy elastic bungy cord that performed safely and consistently, with cords created at custom lengths that allowed for various jump heights and locations."
+   description: Inspired by the Vanuatu ritual called land diving and the Oxford University Dangerous Sports Club’s experimental jumps in the 1970s, AJ and fellow adventurer Chris Sigglekow sought ways to make bungy jumping safe. By the mid-80s, AJ had created a super-stretchy elastic bungy cord that performed safely and consistently, with cords created at custom lengths that allowed for various jump heights and locations.
+ - name: Swings
+   id: "swings" 
+   url: "https://example.com/bungee"
+   image: /images/temp-img.jpg
+   image-position: center
+   image-alt: "Swings"
+   gallery-images:
+   - img-url: /images/temp-img.jpg
+     img-alt:
+   - img-url: /images/temp-img.jpg
+     img-alt:
+   - img-url: /images/temp-img.jpg
+     img-alt:
+   - img-url: /images/temp-img.jpg
+     img-alt:
+   - img-url: /images/temp-img.jpg
+     img-alt:
+   locations: 
+   - name: "Cairns"
+     url: "https://example.com/cairns"
+     url-alt: "Visit Cairns"
+   - name: "Sentosa"
+     url: "https://example.com/sentosa"
+     url-alt: "Visit Sentosa"
+   description: First introduced in the year 2000, you will awaken your inner child with the giant swing or 'swing.' Whether you’re in Sentosa flying above the beach, in Cairns where the Barrier Reef meets the rainforest, or in Normandy next to the impressive pillars of the viaduct, we guarantee a rush like no other with vistas only found in these special places. All of our swings cater to solo, dual, or triple customers going at once, with speeds reaching 130 km/h in 3.5 seconds! It is the perfect activity for you and your friends to enjoy together and push your limits.
+ - name: Zipline
+   id: "zipline" 
+   url: "https://example.com/bungee"
+   image: /images/temp-img.jpg
+   image-position: center
+   image-alt: "Zipline"
+   gallery-images:
+   - img-url: /images/temp-img.jpg
+     img-alt:
+   - img-url: /images/temp-img.jpg
+     img-alt:
+   - img-url: /images/temp-img.jpg
+     img-alt:
+   - img-url: /images/temp-img.jpg
+     img-alt:
+   - img-url: /images/temp-img.jpg
+     img-alt:
+   locations: 
+   - name: "Cairns"
+     url: "https://example.com/cairns"
+     url-alt: "Visit Cairns"
+   - name: "Sentosa"
+     url: "https://example.com/sentosa"
+     url-alt: "Visit Sentosa"
+   description: The giant zipline at Skypark Normandie, known as the 'Scable,' is the ideal activity to start exploring your limits. This activity will give you a taste of the unique sensations that we offer on-site and is also the best way to discover our valley and its amazing flora and fauna. Starting from a specially designed launch area, you will be released onto our 400m cable at speeds reaching 100 km/h, where you, by yourself or with your partner, will get a great introduction to our adrenaline-packed activities.
+ - name: Skybridge & Skycube
+   id: "skybridge" 
+   url: "https://example.com/bungee"
+   image: /images/temp-img.jpg
+   image-position: center
+   image-alt: "Skybridge"
+   gallery-images:
+   - img-url: /images/temp-img.jpg
+     img-alt:
+   - img-url: /images/temp-img.jpg
+     img-alt:
+   - img-url: /images/temp-img.jpg
+     img-alt:
+   - img-url: /images/temp-img.jpg
+     img-alt:
+   - img-url: /images/temp-img.jpg
+     img-alt:
+   locations: 
+   - name: "Cairns"
+     url: "https://example.com/cairns"
+     url-alt: "Visit Cairns"
+   - name: "Sentosa"
+     url: "https://example.com/sentosa"
+     url-alt: "Visit Sentosa"
+   description: For more than 30 years, AJ Hackett has created many thrilling activities from this 140-meter-long footbridge. The skybridge is both the access point to the activities of Skypark Normandie and a unique place to be as close as possible to the practitioners who come here to take on many challenges. At the entrance, you can enjoy a terrace to watch the departure of the giant zip line. As you advance on the footbridge, you must gradually master the void that presents itself beneath your feet—10, 20, 30, and then 60 meters of emptiness to arrive at the second pile of the viaduct. At 140 meters, it can feel long when, with each step, you have to control your fear of heights. But in the end, it is the promise of a unique point of view of the Souleuvre valley—a 360-degree panorama of this preserved and protected nature.
+ - name: Walk The Plank
+   id: "walktheplank" 
+   url: "https://example.com/bungee"
+   image: /images/temp-img.jpg
+   image-position: center
+   image-alt: "Walk The Plank"
+   gallery-images:
+   - img-url: /images/temp-img.jpg
+     img-alt:
+   - img-url: /images/temp-img.jpg
+     img-alt:
+   - img-url: /images/temp-img.jpg
+     img-alt:
+   - img-url: /images/temp-img.jpg
+     img-alt:
+   - img-url: /images/temp-img.jpg
+     img-alt:
+   locations: 
+   - name: "Cairns"
+     url: "https://example.com/cairns"
+     url-alt: "Visit Cairns"
+   - name: "Sentosa"
+     url: "https://example.com/sentosa"
+     url-alt: "Visit Sentosa"
+   description: As in the olden days, try yourself by walking the plank, perched 50 m in the air and 140 m above sea level, with amazing views of the ocean and rainforest. This activity is the perfect way to introduce yourself to heights. Our team will guide you along the way to help you push your boundaries. If you’re confident enough, we will let you dangle over the edge of the plank for the perfect photo opportunity!
+ - name: Luge
+   id: "luge" 
+   url: "https://example.com/bungee"
+   image: /images/temp-img.jpg
+   image-position: center
+   image-alt: "Luge"
+   gallery-images:
+   - img-url: /images/temp-img.jpg
+     img-alt:
+   - img-url: /images/temp-img.jpg
+     img-alt:
+   - img-url: /images/temp-img.jpg
+     img-alt:
+   - img-url: /images/temp-img.jpg
+     img-alt:
+   - img-url: /images/temp-img.jpg
+     img-alt:
+   locations: 
+   - name: "Cairns"
+     url: "https://example.com/cairns"
+     url-alt: "Visit Cairns"
+   - name: "Sentosa"
+     url: "https://example.com/sentosa"
+     url-alt: "Visit Sentosa"
+   description: A unique sled with speeds up to 45 km/h. Sledding is a simple, family-friendly, low-cost pleasure, ideal for both summer and winter. A leisure activity that brings you great sliding sensations without effort, sledding can be practiced alone or in pairs. It can be enjoyed from 3 years old and accommodates individuals weighing up to 180 kg. Make your way down the valley for a fun-filled experience immersed in the Natura 2000 protected area; you may see a cow or two in the adjacent pastures!
+ - name: Adventure Parks
+   id: "adventureparks" 
+   url: "https://example.com/bungee"
+   image: /images/temp-img.jpg
+   image-position: center
+   image-alt: "Adventure Parks"
+   gallery-images:
+   - img-url: /images/temp-img.jpg
+     img-alt:
+   - img-url: /images/temp-img.jpg
+     img-alt:
+   - img-url: /images/temp-img.jpg
+     img-alt:
+   - img-url: /images/temp-img.jpg
+     img-alt:
+   - img-url: /images/temp-img.jpg
+     img-alt:
+   locations: 
+   - name: "Cairns"
+     url: "https://example.com/cairns"
+     url-alt: "Visit Cairns"
+   - name: "Sentosa"
+     url: "https://example.com/sentosa"
+     url-alt: "Visit Sentosa"
+   description: "The perfect activity for all ages, with multi-leveled courses, allows you to challenge yourself through different obstacles ranging from mini ziplines to roped walkways and climbing challenges. We offer two types of adventure parks: the original, where you are harnessed the whole way through the activities, or the new generation, which is netted! This means no harness is needed—just your own bravery as you try to complete the challenges ahead!"
+ - name: Climbing Walls
+   id: "climbingwalls" 
+   url: "https://example.com/bungee"
+   image: /images/temp-img.jpg
+   image-position: center
+   image-alt: "Climbing Walls"
+   gallery-images:
+   - img-url: /images/temp-img.jpg
+     img-alt:
+   - img-url: /images/temp-img.jpg
+     img-alt:
+   - img-url: /images/temp-img.jpg
+     img-alt:
+   - img-url: /images/temp-img.jpg
+     img-alt:
+   - img-url: /images/temp-img.jpg
+     img-alt:
+   locations: 
+   - name: "Cairns"
+     url: "https://example.com/cairns"
+     url-alt: "Visit Cairns"
+   - name: "Sentosa"
+     url: "https://example.com/sentosa"
+     url-alt: "Visit Sentosa"
+   description: "Challenge yourself by climbing on our World Cup-sized walls, where all levels of difficulty are on display for you to try out! Our team of trained operators will ensure you give it your best while keeping you safe during your climb with the use of harnesses and all relevant equipment."
 ---
 
 <section class="px-5p pt-10p pb-5p">
@@ -40,39 +226,39 @@ experience:
     </div>
 
     <a href="#">
-        <h3 class="title-font text-xl pb-1p"> Bungy </h3>
+        <h3 class="title-font text-xl pb-1p grow"> Bungy </h3>
     </a>
     <hr class="pb-1p">
     <a href="#">
-        <h3 class="title-font text-xl pb-1p"> Swings </h3>
+        <h3 class="title-font text-xl pb-1p grow"> Swings </h3>
     </a>
     <hr class="pb-1p">
     <a href="#">
-        <h3 class="title-font text-xl pb-1p"> Ziplines </h3>
+        <h3 class="title-font text-xl pb-1p grow"> Ziplines </h3>
     </a>
     <hr class="pb-1p">
     <a href="#">
-        <h3 class="title-font text-xl pb-1p"> Skybrige & Skycube </h3>
+        <h3 class="title-font text-xl pb-1p grow"> Skybrige & Skycube </h3>
     </a>
     <hr class="pb-1p">
     <a href="#">
-        <h3 class="title-font text-xl pb-1p"> Walk The Plank </h3>
+        <h3 class="title-font text-xl pb-1p grow"> Walk The Plank </h3>
     </a>
     <hr class="pb-1p">
     <a href="#">
-        <h3 class="title-font text-xl pb-1p"> Luge </h3>
+        <h3 class="title-font text-xl pb-1p grow"> Luge </h3>
     </a>
     <hr class="pb-1p">
     <a href="#">
-        <h3 class="title-font text-xl pb-1p"> Adventure Parks  </h3>
+        <h3 class="title-font text-xl pb-1p grow"> Adventure Parks  </h3>
     </a>
     <hr class="pb-1p">
     <a href="#">
-        <h3 class="title-font text-xl pb-1p"> Climbing Walls </h3>
+        <h3 class="title-font text-xl pb-1p grow"> Climbing Walls </h3>
     </a>
     <hr class="pb-1p">
     <a href="#">
-        <h3 class="title-font text-xl pb-1p"> Climbing Walls </h3>
+        <h3 class="title-font text-xl pb-1p grow"> Climbing Walls </h3>
     </a>
     <hr class="pb-1p">
     
@@ -81,7 +267,7 @@ experience:
 
 <!-----BG and Text-------->
 
-<section class="mt-5p"> 
+<section class="my-5p"> 
     <div class="bg-cover bg-no-repeat relative" style="background-image: url('{{ page.quote-image }}'); height: 24rem;">
         <div class="flex flex-col justify-center h-full p-5">
             <p class="header-font text-6xl">Challenge life. <br> Challenge yourself.</p>
@@ -89,23 +275,49 @@ experience:
     </div>
 </section>
 
+
+<!-----Experiences-------->
+
 <section class="px-5p">
     {% for item in page.experience %}
-    <div class="pt-5p" id="{{ item.id }}">
-        <h3 class="title-font text-4xl pb-1p"> {{ item.name }} </h3>
+    <div class="pt-10p" id="{{ item.id }}">
+        <h3 class="title-font text-4xl pb-1p">{{ item.name }}</h3>
         <hr class="pb-1p">
+
+        <!-- Large Featured Image -->
         <div class="relative h-full min-h-30 sm:min-h-50">
             <a href="{{ item.url }}">
-                <img class="absolute inset-0 w-full h-full object-cover rounded-3xl" src="{{ item.image }}" style="object-position: {{ item.image-position }};" alt="{{ item.image-alt }}" />
+                <img class="absolute inset-0 w-full h-full object-cover rounded-3xl pb-1.5" src="{{ item.image }}" style="object-position: {{ item.image-position }};" alt="{{ item.image-alt }}" />
             </a>
         </div>
+
+        <!-- Gallery Images -->
+        <div class="grid grid-cols-5 gap-1 w-full overflow-x-auto" id="lightgallery">
+            {% for image in item.gallery-images %}
+               <a class="col-span-1" href="{{ image.img-url }}" aria-label="View larger version of the image">
+                  <div class="aspect-square relative">
+                        <img class="w-full h-full object-cover object-center rounded-3xl" src="{{ image.img-url }}" alt="{{ image.img-alt }}">
+                  </div>
+               </a>
+            {% endfor %}
+         </div>
+
+        <!-- Description -->
+        <p class="pt-2p">{{ item.description }}</p>
+
+        <!-- Location Links -->
         <h4 class="uppercase text-2xl py-1p">
             {% for location in item.locations %}
-                <a href="{{ location.url }}" alt="{{ location.url-alt }}">{{ location.name }}</a>{% if forloop.last == false %} | {% endif %}
+                <a href="{{ location.url }}" alt="{{ location.url-alt }}" class="grow">{{ location.name }}</a>{% if forloop.last == false %} | {% endif %}
             {% endfor %}
         </h4>
-        <p class="pb-2p">{{ item.description }}</p>
     </div>
     {% endfor %}
 </section>
+
+
+
+
+
+
 
