--- a/meet-aj-hackett.html
+++ b/meet-aj-hackett.html
@@ -9,7 +9,7 @@ seo:
   social_image: 
   hide-from-google: true
 header:
- - image: /images/temp-img.jpg
+ - image: /images/meet-aj-hackett-aj-hackett-international.png
    position: 
    label: 
    title: AJ Hackett
