--- a/meet-aj-hackett.html
+++ b/meet-aj-hackett.html
@@ -14,10 +14,16 @@ header:
    label: 
    title: AJ Hackett
    text: A life less ordinary
-image-1: /images/temp-img.jpg
+image-1: /images/aj-hackett-bungy-eiffel-tower-paris-france.png
 image-1-position:
 image-1-alt:
-quote-image: /images/temp-img.jpg
+image-2: /images/tandem-bungy-jump-aj-hackett-international.png
+image-2-position:
+image-2-alt:
+image-3: /images/adventure-tourism-aj-hackett-international.png
+image-3-position:
+image-3-alt:
+quote-image: /images/aj-hackett-bungy-aj-hackett-international.png
 ---
 
 <!-----Intro Section and Text-------->
@@ -40,7 +46,7 @@ quote-image: /images/temp-img.jpg
     
     <div class="grid grid-cols-2 mb-5p">
         <div class="relative h-full min-h-30 sm:min-h-50">
-            <img class="absolute inset-0 w-full h-full object-cover rounded-3xl" src="{{ page.image-1 }}" style="object-position: {{ page.image-1-position }};" alt="{{ page.image-1-alt }}" />
+            <img class="absolute inset-0 w-full h-full object-cover rounded-3xl" src="{{ page.image-2 }}" style="object-position: {{ page.image-2-position }};" alt="{{ page.image-2-alt }}" />
         </div>
         <div class="pl-5p">
             <p> The bungy jumping industry that he started has opened bold new avenues for tourism and has expanded the minds of millions of people worldwide. AJ’s personal life and business philosophies match his have-a-go ethos. Aptly, for a man who made his name encouraging others to jump off bridges, AJ is drawn to risk and has developed a knack for managing danger to create a safe and predictable environment for bungy jumpers.
@@ -54,7 +60,7 @@ quote-image: /images/temp-img.jpg
             </p>
         </div>
         <div class="relative h-full min-h-30 sm:min-h-50">
-            <img class="absolute inset-0 w-full h-full object-cover rounded-3xl" src="{{ page.image-1 }}" style="object-position: {{ page.image-1-position }};" alt="{{ page.image-1-alt }}" />
+            <img class="absolute inset-0 w-full h-full object-cover rounded-3xl" src="{{ page.image-3 }}" style="object-position: {{ page.image-3-position }};" alt="{{ page.image-3-alt }}" />
         </div>
     </div>
 
