--- a/pondok-santi-estate.html
+++ b/pondok-santi-estate.html
@@ -9,21 +9,48 @@ seo:
   social_image: 
   hide-from-google: true
 header:
- - image: /images/temp-img.jpg
+ - image: /images/pondok-santi-estate-on-gili-trawangan-lombok.png
    position: 
    label: 
    title: Pondok Santi Estate
    text: Every day, do something that reminds you that you’re still alive.
+gallery-images:
+ - img-url: /images/ocean-view-villa-pondok-santi-estate-gili-trawangan-indonesia.png
+   img-alt: Ocean view villa at Pondok Santi Estate, Gili Trawangan, Indonesia
+ - img-url: /images/beautiful-restaurant-ijo-restaurant-pondok-santi-estate-gili-trawangan.jpg
+   img-alt: Beautiful restaurant Ijo at Pondok Santi Estate, Gili Trawangan
+ - img-url: /images/morning-light-at-pondok-santi-estate-gili-trawangan.png
+   img-alt: Morning light at Pondok Santi Estate, Gili Trawangan
+ - img-url: /images/evening-view-ijo-restaurant-pondok-santi-estate-gili-trawangan.png
+   img-alt: Evening view of Ijo restaurant at Pondok Santi Estate, Gili Trawangan
+ - img-url: /images/drone-shot-of-the-estate-pondok-santi-estate-gili-trawangan.png
+   img-alt: Drone shot of the estate at Pondok Santi Estate, Gili Trawangan
+ - img-url: /images/pondok-santi-estate-on-gili-trawangan-lombok.png
+   img-alt: 
 ---
 
 <section class="px-5p pt-10p">
 
-    <div class="pb-10p">
+    <div class="pb-5p">
         <p class="pb-2p"> Set amidst the <strong>idyllic shores of Gili Trawangan, Pondok Santi Estate offers an escape from the ordinary. From our luxurious accommodations to our exquisite dining experiences, every moment is crafted to elevate your senses.</strong> Welcome to a world where serenity meets sophistication, where every detail is designed to enchant and inspire. Welcome to Pondok Santi Estate.
         </p>
-        <div class="mb-10p">
+        <div class="mb-5p">
             <a href="#" class="button" aria-label="">Visit Pondok Santi Estate</a>
         </div>
     </div>
 
+</section>
+
+
+<section class="px-5p pb-10p">
+  <!-- Gallery Images -->
+  <div class="grid grid-cols-3 gap-1 w-full overflow-x-auto" id="lightgallery">
+    {% for image in page.gallery-images %}
+    <a class="col-span-1" href="{{ image.img-url }}" aria-label="View larger version of the image">
+      <div class="aspect-square relative">
+        <img class="w-full h-full object-cover object-center rounded-xl sm:rounded-3xl" src="{{ image.img-url }}" alt="{{ image.img-alt }}">
+      </div>
+    </a>
+    {% endfor %}
+  </div>
 </section>
