--- a/skypark-aj-hackett.html
+++ b/skypark-aj-hackett.html
@@ -17,8 +17,8 @@ header:
 site:
  - location: Cairns
    url:
-   image: /images/temp-img.jpg
-   image-position:
+   image: /images/cairns-australian-skypark-by-aj-hackett-international.png
+   image-position: 50% 70%
    image-alt:
    experiences: 
    - "Bungy Jump" 
@@ -31,7 +31,7 @@ site:
  - location: Macau
    url:
    url-alt:
-   image: /images/temp-img.jpg
+   image: /images/macau-skypark-by-aj-hackett-international.png
    image-position:
    image-alt:
    experiences: 
