--- a/purpose-promise-values.html
+++ b/purpose-promise-values.html
@@ -16,15 +16,14 @@ header:
    text: A life less ordinary
 purpose-image: /images/our-purpose-aj-hackett-international.png
 purpose-image-position:
-purpose-image-alt:
+purpose-image-alt:   
 promise-image: /images/our-promise-aj-hackett-international.png
 promise-image-position:
-promise-image-alt:
-values-image: /images/our-promise-aj-hackett-international.png
+promise-image-alt:   
+values-image: /images/our-values-aj-hackett-international.png
 values-image-position:
-values-image-alt:
+values-image-alt:   
 ---
-
 
 <!-----Purpose-------->
 
@@ -36,16 +35,17 @@ values-image-alt:
 
     <div class="grid grid-cols-2 mb-5p">
         <div class="pr-5p">
-            <p> Our purpose is to positively change lives and help people all over the world overcome their personal barriers by achieving something they never thought possible.
-            </p>
+            <p> Our purpose is to positively change lives and help people all over the world overcome their personal barriers by achieving something they never thought possible. </p>
         </div>
         <div class="relative h-full min-h-30 sm:min-h-50">
-            <img class="absolute inset-0 w-full h-full object-cover rounded-3xl" src="{{ purpose-image }}" style="object-position: {{ purpose-image-position }};" alt="{{ purpose-image-alt }}" />
+            <img class="absolute inset-0 w-full h-full object-cover rounded-3xl" 
+                 src="{{ purpose-image }}" 
+                 style="object-position: {{ purpose-image-position }};" 
+                 alt="{{ purpose-image-alt }}" />
         </div>
     </div>
 
 </section>
-
 
 <!-----Promise-------->
 
@@ -60,13 +60,14 @@ values-image-alt:
             <p> To act sustainably and be trusted for the care of our people, our customers, and the planet, while pursuing quality, creativity, and innovation in adventure tourism destinations. As a result, our promise is shifting our mindset from the inward-looking corporate visions and missions of the past to a fresh, open-minded perspective in which we can be a trusted adventure tourism operator for the future. </p>
         </div>
         <div class="relative h-full min-h-30 sm:min-h-50">
-            <img class="absolute inset-0 w-full h-full object-cover rounded-3xl" src="{{ promise-image }}" style="object-position: {{ promise-image-position }};" alt="{{ promise-image-alt }}" />
+            <img class="absolute inset-0 w-full h-full object-cover rounded-3xl" 
+                 src="{{ promise-image }}" 
+                 style="object-position: {{ promise-image-position }};" 
+                 alt="{{ promise-image-alt }}" />
         </div>
     </div>
 
 </section>
-
-
 
 <!-----Values-------->
 
@@ -90,7 +91,10 @@ values-image-alt:
             <p class="pb-2p"> We create fun, memorable experiences for our customers and unforgettable employment opportunities for our team. </p>
         </div>
         <div class="relative h-full min-h-30 sm:min-h-50">
-            <img class="absolute inset-0 w-full h-full object-cover rounded-3xl" src="{{ values-image }}" style="object-position: {{ values-image-position }};" alt="{{ values-image-alt }}" />
+            <img class="absolute inset-0 w-full h-full object-cover rounded-3xl" 
+                 src="{{ values-image }}" 
+                 style="object-position: {{ values-image-position }};" 
+                 alt="{{ values-image-alt }}" />
         </div>
     </div>
 
