images and subtitles

--- a/accessibility.html
+++ b/accessibility.html
@@ -1,19 +1,28 @@
 ---
 layout: default
-title: 
+title: "Inclusive Adventure: Accessibility at AJ Hackett International"
 seo:
-  title: 
-  description: 
+  title: Accessibility and Inclusive Adventures at AJ Hackett International
+  description: Discover how AJ Hackett International ensures inclusive adventures for all. Learn about our commitment to accessibility, from accommodating various disabilities to providing unique experiences like bungy jumping in wheelchairs and guided zipline tours. Our focus is on helping everyone push their limits and build confidence through accessible and adventurous activities.
   keywords:
-    - 
+    - Accessibility in adventure tourism
+    - Inclusive activities
+    - Accessible bungy jumping
+    - Disability-friendly adventure experiences
+    - Wheelchair accessible activities
+    - Adaptive adventure tours
+    - Accessible zipline experiences
+    - Adventure tourism for special needs
+    - Inclusive adventure experiences
+    - Accessible team bonding events
   social_image: 
   hide-from-google: true
 header:
- - image: /images/pondok-santi-estate-on-gili-trawangan-lombok.png
-   position: 
+ - image: /images/accessibility-aj-hackett-international-banner.jpg
+   position: 50% 50%
    label: 
    title: Accessibility
-   text: Every day, do something that reminds you that you’re still alive.
+   text: "Adventure Without Boundaries: Embracing Accessibility for All"
 gallery-images:
  - img-url: /images/accessibility-aj-hackett-international.png
    img-alt: 
