--- a/community.html
+++ b/community.html
@@ -1,24 +1,33 @@
 ---
 layout: default
-title: 
+title: Our Community Impact and Initiatives
 seo:
-  title: 
-  description: 
+  title: Community Engagement and Charity Initiatives at AJ Hackett International | Giving Back and Events
+  description: Discover how AJ Hackett International values and supports the communities where they operate. From charity events like Jump For Hope and Crazy Jump Day to sustainable local projects, explore our commitment to making a positive impact and giving back. Learn about our community-focused initiatives and how we contribute to local causes and environmental sustainability.
   keywords:
-    - 
+    - AJ Hackett International community initiatives
+    - charity events Skypark by AJ Hackett
+    - Jump For Hope fundraising
+    - Crazy Jump Day Macau Tower
+    - community support adventure tourism
+    - local giving back programs
+    - sustainable practices adventure parks
+    - Pondok Santi Estate food forest
+    - Skypark Cairns charity partnerships
+    - community impact adventure tourism
   social_image: 
   hide-from-google: true
 header:
- - image: /images/temp-img.jpg
+ - image: /images/community-aj-hackett-international.png
    position: 
    label: 
    title: Community
-   text: A life less ordinary
+   text: "Rooted in Community: Engaging and Giving Back"
 ---
 
 <!---------------Intro------------->
 <section class="px-5p pt-10p"> 
-        <p class="pb-5p"> Intro text </p>
+        <p class="pb-5p"> At AJ Hackett International, our commitment to community extends beyond thrilling adventures and breathtaking experiences. We deeply value the communities where we are located, recognizing the vital role they play in our success and mission. Our community-focused initiatives aim to foster meaningful connections, support local causes, and give back in impactful ways. From hosting charity events and participating in local projects to creating sustainable practices that benefit surrounding areas, we strive to make a positive difference. Discover how we are actively engaging with and contributing to the communities that inspire and support us. </p>
 
 <!--------Overview------------->
 
