--- a/meet-aj-hackett.html
+++ b/meet-aj-hackett.html
@@ -1,11 +1,20 @@
 ---
 layout: default
-title: 
+title: "Meet AJ Hackett: The Man Behind the Bungy Revolution"
 seo:
-  title: 
-  description: 
+  title: "AJ Hackett: The Kiwi Innovator Who Revolutionized Adventure Tourism
+  description: Discover the story of AJ Hackett, the New Zealand entrepreneur who pioneered the global bungy jumping industry. Learn how his daring spirit and innovative approach have shaped the world of adventure tourism."
   keywords:
-    - 
+    - AJ Hackett
+    - Bungy jumping
+    - Adventure tourism
+    - New Zealand entrepreneur
+    - Eiffel Tower jump
+    - Adrenaline activities
+    - Risk management
+    - AJ Hackett story
+    - Adventure business
+    - Extreme sports pioneer
   social_image: 
   hide-from-google: true
 header:
@@ -79,14 +88,26 @@ quote-image: /images/aj-hackett-bungy-aj-hackett-international.png
 
 
 <!-----Meet AJ Hackett with video-------->
+<section class="px-5p grid grid-cols-1 gap-y-5 py-10p">
 
-<section class="px-5p grid grid-cols-2 pt-10p">
-
-    <div class="col-span-full pb-10p">
+    <div class="col-span-full pb-5p">
         <p class="title-font text-4xl"> Meet AJ Hackett </p>
     </div>
 
+    <div style="padding:56.25% 0 0 0;position:relative;" class="pb-2p">
+        <iframe src="https://player.vimeo.com/video/466037759?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="AJ Interview"></iframe>
+    </div>
+    
+    <div style="padding:56.25% 0 0 0;position:relative;" class="pb-2p">
+        <iframe src="https://player.vimeo.com/video/466047207?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Who is Bungy for"></iframe>
+    </div>
+    
+    <div style="padding:56.25% 0 0 0;position:relative;" class="pb-2p">
+        <iframe src="https://player.vimeo.com/video/465223636?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Bungy highlights"></iframe>
+    </div>
+
 </section>
+
 
 
 
