--- a/meet-the-team.html
+++ b/meet-the-team.html
@@ -1,19 +1,28 @@
 ---
 layout: default
-title: 
+title: Meet the Visionaries Behind AJ Hackett International
 seo:
-  title: 
-  description: 
+  title: "Meet the Team at AJ Hackett International: Pioneers in Adventure Tourism"
+  description: Meet the dedicated team behind AJ Hackett International, the pioneers of adventure tourism. Discover the experience and passion of our leaders, from AJ Hackett, the founder of bungy jumping, to our dynamic team members driving innovation and excellence across our global Skyparks. Learn how their expertise shapes our thrilling adventures and commitment to excellence.
   keywords:
-    - 
+    - AJ Hackett International team
+    - Adventure tourism experts
+    - Bungy jumping pioneers
+    - Meet the team
+    - Skypark leaders
+    - AJ Hackett founder
+    - Team profiles
+    - Adventure tourism leadership
+    - Global Skyparks team
+    - Innovation in adventure tourism
   social_image: 
   hide-from-google: true
 header:
- - image: /images/meet-aj-hackett-aj-hackett-international.png
+ - image: /images/meet-the-team-aj-hackett-international-banner.png
    position: 
    label: 
    title: Meet the team
-   text: A life less ordinary
+   text: The Faces Driving Our Global Adventure
 people:
  - name: AJ Hackett
    image: /images/aj-hackett-meet-the-team-aj-hackett-international.png
@@ -55,7 +64,7 @@ people:
 <section class="px-5p pt-10p pb-5p">
 
     <div class="pb-5p">
-        <p class="pb-5p sm:pb-2p"> Intro text </p>
+        <p class="pb-5p sm:pb-2p"> At AJ Hackett International, our success is built on the expertise, passion, and dedication of our remarkable team. From pioneering adventure tourism to leading innovative projects, each member of our team brings unique skills and experiences that drive our mission forward. Meet the visionaries and leaders who make our extraordinary adventures possible. From AJ Hackett, the trailblazing founder of bungy jumping, to our dynamic leaders and specialists who ensure every Skypark and experience is exceptional, our team is at the heart of everything we do. Discover more about the individuals who are shaping the future of adventure tourism and making a difference around the globe. </p>
     </div>
 
     <section>
@@ -76,5 +85,5 @@ people:
         </div>
         {% endfor %}
       </section>
-      
+    </section>    
   
