--- a/pondok-santi-estate.html
+++ b/pondok-santi-estate.html
@@ -1,11 +1,20 @@
 ---
 layout: default
-title: 
+title: "Pondok Santi Estate: Luxury on Gili Trawangan, Indonesia"
 seo:
-  title: 
-  description: 
+  title: "Pondok Santi Estate Gili Trawangan: Luxury Accommodations & Exquisite Dining"
+  description: Discover Pondok Santi Estate on Gili Trawangan, where luxury meets tranquility. Enjoy exquisite dining, elegant accommodations, and breathtaking views. Escape the ordinary and experience unparalleled serenity and sophistication in paradise.
   keywords:
-    - 
+    - Pondok Santi Estate
+    - Gili Trawangan luxury accommodations
+    - Luxury resorts Indonesia
+    - Idyllic beach escapes Gili Trawangan
+    - Exquisite dining Gili Trawangan
+    - Serene vacation spots Indonesia
+    - Sophisticated beachfront estate
+    - Pondok Santi Estate reviews
+    - Gili Trawangan retreats
+    - Elegant resorts in Indonesia
   social_image: 
   hide-from-google: true
 header:
@@ -13,7 +22,7 @@ header:
    position: 
    label: 
    title: Pondok Santi Estate
-   text: Every day, do something that reminds you that you’re still alive.
+   text: "Elegance in Paradise: Experience Gili Trawangan"
 gallery-images:
  - img-url: /images/ocean-view-villa-pondok-santi-estate-gili-trawangan-indonesia.png
    img-alt: Ocean view villa at Pondok Santi Estate, Gili Trawangan, Indonesia
