--- a/projects.html
+++ b/projects.html
@@ -1,19 +1,28 @@
 ---
 layout: default
-title: 
+title: "Exciting Updates: Our Latest Projects at AJ Hackett International"
 seo:
-  title: 
-  description: 
+  title: "AJ Hackett International: Latest Skypark Projects"
+  description: "Explore AJ Hackett International's latest projects as we enhance Skypark experiences worldwide. Discover the exciting renovations at Skypark Cairns and how we’re pushing adventure boundaries with innovative upgrades, new features, and improved visitor amenities. Stay updated on our progress and see how we're transforming our adventure parks for unforgettable thrills."
   keywords:
-    - 
+    - AJ Hackett International projects
+    - Skypark Cairns renovations
+    - Adventure park upgrades
+    - Skypark experience improvements
+    - Adventure park enhancements
+    - Latest Skypark projects
+    - Skypark new features
+    - Adventure park renovations
+    - Skypark Cairns roof project
+    - AJ Hackett adventure park updates
   social_image: 
   hide-from-google: true
 header:
- - image: /images/temp-img.jpg
+ - image: /images/ongoing-projects-aj-hackett-international.png
    position: 
    label: 
    title: Current Projects
-   text: A life less ordinary
+   text: Explore Our Ongoing Projects and Upgrades
 cairns-roof-image: /images/cairns-australian-skypark-by-aj-hackett-international.png
 cairns-roof-position:
 cairns-roof-alt:
@@ -37,7 +46,7 @@ gallery-images:
 <!---------------Intro------------->
 <section class="px-5p pt-10p"> 
     <div>
-        <p class="pb-5p"> Intro text to projects </p>
+        <p class="pb-5p"> At AJ Hackett International, we're always pushing the boundaries of adventure and striving to enhance our offerings. We're excited to share some of our latest projects that are set to elevate the Skypark experience even further. From innovative upgrades to thrilling new features, we are dedicated to continually improving our sites to ensure that every visit is unforgettable. Here’s a look at what we’ve been working on and how we’re bringing new dimensions of excitement and comfort to our adventure parks around the globe. </p>
     </div>
 </section>
 
