--- a/purpose-promise-values.html
+++ b/purpose-promise-values.html
@@ -1,19 +1,28 @@
 ---
 layout: default
-title: 
+title: "Our Purpose, Promise, and Values: Commitment to Adventure and Community"
 seo:
-  title: 
-  description: 
+  title: "AJ Hackett International: Our Purpose, Promise, and Core Values"
+  description: Discover AJ Hackett International's commitment to transforming lives through adventure tourism. Learn about our purpose to help individuals overcome personal barriers, our promise of sustainable and innovative practices, and our core values of respect, adventure, innovation, safety, and experience. Explore how we strive to positively impact communities and create memorable experiences worldwide.
   keywords:
-    - 
+    - Adventure tourism
+    - Sustainable adventure tourism
+    - Personal growth through adventure
+    - Company values adventure tourism
+    - Positive impact adventure tourism
+    - Innovation in adventure tourism
+    - Safety in adventure tourism
+    - Community-focused adventure tourism
+    - AJ Hackett International purpose
+    - Adventure tourism promise and values
   social_image: 
   hide-from-google: true
 header:
- - image: /images/meet-aj-hackett-aj-hackett-international.png
+ - image: /images/purpose-promise-values-aj-hackett-international.png
    position: 
    label: 
-   title: Our Purpose, Promise and Values
-   text: A life less ordinary
+   title: Our Purpose, Promise & Values
+   text: The Foundations of Our Adventure Philosophy
 purpose-image: /images/our-purpose-aj-hackett-international.png
 purpose-image-position:
 purpose-image-alt:   
