--- a/reconciliation.html
+++ b/reconciliation.html
@@ -1,19 +1,28 @@
 ---
 layout: default
-title: 
+title: Reconciliation and Commitment to Indigenous Partnerships
 seo:
-  title: 
-  description: 
+  title: "AJ Hackett International's Commitment to Reconciliation and RAP Endorsement"
+  description: Discover AJ Hackett International's dedication to reconciliation with our endorsed Reflect RAP by Reconciliation Australia. Learn about our commitment to acknowledging Traditional Custodians, supporting the Djapugay community, and integrating sustainable practices at Skypark Cairns. Explore our journey towards meaningful reconciliation and respect for Indigenous cultures.
   keywords:
-    - 
+    - Reconciliation Action Plan (RAP)
+    - Reflect RAP endorsement
+    - AJ Hackett International reconciliation
+    - Traditional Custodians Australia
+    - Djapugay community support
+    - Skypark Cairns reconciliation
+    - Indigenous cultural respect
+    - Sustainable practices Australia
+    - Reconciliation Australia commitment
+    - Indigenous land stewardship
   social_image: 
   hide-from-google: true
 header:
- - image: /images/temp-img.jpg
+ - image: /images/skypark-cairns-australia-aj-hackett-international.png
    position: 
    label: 
    title: Reconciliation
-   text: A life less ordinary
+   text: Acknowledging the Past, Shaping the Future
 reconciliation-image: /images/reconciliation-skypark-australia-aj-hackett-international.png
 reconciliation-position:
 reconciliation-alt:
