--- a/safety-management.html
+++ b/safety-management.html
@@ -1,19 +1,28 @@
 ---
 layout: default
-title: 
+title: "Ensuring Safety: AJ Hackett International's Commitment to Health and Risk Management"
 seo:
-  title: 
-  description: 
+  title: "Comprehensive Safety Management at AJ Hackett International: Ensuring Top-Notch Safety and Compliance"
+  description: Explore how AJ Hackett International ensures top-tier safety for our adventure tourism activities. From rigorous compliance with health and safety legislation to advanced risk management and specialized training, learn about our comprehensive safety measures that prioritize the well-being of our customers and staff across all our global sites.
   keywords:
-    - 
+    - Adventure tourism safety
+    - Health and safety management
+    - Safety measures in adventure activities
+    - Risk management in adventure tourism
+    - Safety standards for adventure tourism
+    - Safety training for adventure activities
+    - Safety protocols AJ Hackett International
+    - Compliance with safety legislation
+    - Safety equipment standards
+    - Adventure activity safety procedures
   social_image: 
   hide-from-google: true
 header:
- - image: /images/meet-aj-hackett-aj-hackett-international.png
+ - image: /images/safety-management-banner-aj-hackett-international.png
    position: 
    label: 
    title: Safety Management
-   text: A life less ordinary
+   text: Safeguarding Every Adventure Through Rigorous Practices
 ---
 
 <section class="px-5p py-10p">
