--- a/skypark-aj-hackett.html
+++ b/skypark-aj-hackett.html
@@ -1,19 +1,31 @@
 ---
 layout: default
-title: 
+title: Discover Skypark by AJ Hackett
 seo:
-  title: 
-  description: 
+  title: "Skypark by AJ Hackett: Ultimate Adventure Destinations Around the World"
+  description: Discover Skypark by AJ Hackett, where adrenaline meets adventure at our global locations. Experience thrilling bungy jumps, giant swings, and more at Cairns, Macau, Sentosa, and Normandie. Celebrate 30 years of exciting experiences and explore unique gravity-defying activities at each of our world-class sites.
   keywords:
-    - 
+    - Skypark by AJ Hackett
+    - Adventure tourism
+    - Bungy jump experiences
+    - Giant swing rides
+    - Gravity-defying activities
+    - Cairns adventure park
+    - Macau Tower attractions
+    - Sentosa thrill rides
+    - Normandie Skypark
+    - World’s highest bungy jump
+    - Unique adventure destinations
+    - Adrenaline experiences
+    - Global adventure parks
   social_image: 
   hide-from-google: true
 header:
- - image: /images/temp-img.jpg
+ - image: /images/skypark-aj-hackett-international-banner-image.jpg
    position: 
    label: 
-   title: Skypark by AJ Hackett
-   text: Every day, do something that reminds you that you’re still alive.
+   title: Skypark
+   text: Experience Unforgettable Thrills
 site:
  - location: Cairns
    url:
