--- a/sustainability.html
+++ b/sustainability.html
@@ -1,19 +1,30 @@
 ---
 layout: default
-title: 
+title: Sustainability Initiatives at AJ Hackett International
 seo:
-  title: 
-  description: 
+  title: "Sustainability Commitment at AJ Hackett International: Our Eco-Friendly Practices and Initiatives"
+  description: "Discover AJ Hackett International's commitment to sustainability. Explore our eco-friendly practices, from local material use and waste recycling to biodiversity surveys and renewable energy initiatives. Learn how we're working towards carbon neutrality and preserving natural habitats."
   keywords:
-    - 
+    - AJ Hackett International sustainability
+    - Eco-friendly adventure tourism
+    - Carbon neutrality Skypark
+    - Sustainable travel practices
+    - Environmental management projects
+    - Biodiversity conservation Skypark
+    - Renewable energy initiatives
+    - Plastic-free hospitality
+    - Local materials Pondok Santi Estate
+    - Beach clean-ups Gili Trawangan
+    - Bee hives Souleuvre Viaduct
+    - Natura 2000 Normandie
   social_image: 
   hide-from-google: true
 header:
- - image: /images/temp-img.jpg
+ - image: /images/sustainability-aj-hackett-international-banner.png
    position: 
    label: 
    title: Sustainability
-   text: A life less ordinary
+   text: Our Commitment to a Greener Future
 pondok-1-image: /images/beautiful-pristine-beach-pondok-santi-gili-trawangan.png
 pondok-1-position:
 pondok-1-alt:
