--- a/timeline.html
+++ b/timeline.html
@@ -1,19 +1,28 @@
 ---
 layout: default
-title: 
+title: "AJ Hackett: A Journey Through Adventure"
 seo:
-  title: 
-  description: 
+  title: "AJ Hackett International Timeline: 35+ Years of Pioneering Adventure Tourism"
+  description: Explore the history of AJ Hackett International, from the first bungy jump in 1980 to over 35 years of adventure tourism innovation. Discover key milestones, record-breaking achievements, and the global expansion of AJ Hackett's adrenaline-filled experiences.
   keywords:
-    - 
+    - AJ Hackett history
+    - adventure tourism timeline
+    - bungy jump milestones
+    - AJ Hackett milestones
+    - timeline of AJ Hackett International
+    - bungy jumping history
+    - adventure sports evolution
+    - AJ Hackett achievements
+    - global adventure tourism
+    - record-breaking bungy jumps
   social_image: 
   hide-from-google: true
 header:
- - image: /images/temp-img.jpg
+ - image: /images/aj-hackett-international-timeline-banner-image.jpg
    position: 
    label: 
    title: Timeline
-   text: A life less ordinary
+   text: The Evolution of Adventure
 timeline:
  - year: 1988
    heading: New Zealand Stock Exchange Building
@@ -102,7 +111,7 @@ timeline:
 ---
 
 
-<section class="px-5p grid grid-cols-12 pt-10p gap-5"> 
+<section class="px-5p grid grid-cols-12 py-10p gap-5"> 
 
     <div class="col-span-full pb-5p">
         <p class="title-font text-4xl">The Timeline of AJ Hackett International</p>
