--- a/experiences-aj-hackett.html
+++ b/experiences-aj-hackett.html
@@ -1,19 +1,34 @@
 ---
 layout: default
-title: 
+title: Unforgettable Adventures at Skypark by AJ Hackett
 seo:
-  title: 
-  description: 
+  title: "Adrenaline-Fueled Adventures at Skypark by AJ Hackett: Bungy Jumps, Swings, Ziplines & More"
+  description: “Explore thrilling adventures at Skypark by AJ Hackett with heart-pounding activities like bungy jumps, giant swings, ziplines, and more. Discover unique experiences at our global locations, including Cairns, Macau, Sentosa, and Normandie. Perfect for thrill-seekers and families alike!”
   keywords:
-    - 
+    - Skypark by AJ Hackett
+    - Adventure activities
+    - Bungy jumping
+    - Giant swings
+    - Ziplines
+    - Skybridge
+    - Skycube
+    - Walk The Plank
+    - Luge rides
+    - Adventure parks
+    - Climbing walls
+    - Thrill-seekers
+    - Cairns adventure activities
+    - Macau Tower experiences
+    - Sentosa Skypark
+    - Normandie adventure park
   social_image: 
   hide-from-google: true
 header:
- - image: /images/temp-img.jpg
+ - image: /images/family-swing-cairns-aj-hackett-international.png
    position: 
    label: 
    title: Experiences
-   text: Every day, do something that reminds you that you’re still alive.
+   text: Explore Unforgettable Thrills and Sky-High Fun
 quote-image: /images/temp-img.jpg
 experience:
  - name: Bungy
@@ -40,6 +55,12 @@ experience:
    - name: "Sentosa"
      url: "https://example.com/sentosa"
      url-alt: "Visit Sentosa"
+   - name: "Macau"
+     url: "https://example.com/sentosa"
+     url-alt: "Visit Macau"
+   - name: "Normandie"
+     url: "https://example.com/sentosa"
+     url-alt: "Visit Normandie"
    description: Inspired by the Vanuatu ritual called land diving and the Oxford University Dangerous Sports Club’s experimental jumps in the 1970s, AJ and fellow adventurer Chris Sigglekow sought ways to make bungy jumping safe. By the mid-80s, AJ had created a super-stretchy elastic bungy cord that performed safely and consistently, with cords created at custom lengths that allowed for various jump heights and locations.
  - name: Swings
    id: "swings" 
@@ -65,6 +86,9 @@ experience:
    - name: "Sentosa"
      url: "https://example.com/sentosa"
      url-alt: "Visit Sentosa"
+   - name: "Normandie"
+     url: "https://example.com/sentosa"
+     url-alt: "Visit Normandie"
    description: First introduced in the year 2000, you will awaken your inner child with the giant swing or 'swing.' Whether you’re in Sentosa flying above the beach, in Cairns where the Barrier Reef meets the rainforest, or in Normandy next to the impressive pillars of the viaduct, we guarantee a rush like no other with vistas only found in these special places. All of our swings cater to solo, dual, or triple customers going at once, with speeds reaching 130 km/h in 3.5 seconds! It is the perfect activity for you and your friends to enjoy together and push your limits.
  - name: Zipline
    id: "zipline" 
@@ -84,12 +108,9 @@ experience:
    - img-url: /images/temp-img.jpg
      img-alt:
    locations: 
-   - name: "Cairns"
-     url: "https://example.com/cairns"
-     url-alt: "Visit Cairns"
-   - name: "Sentosa"
+   - name: "Normandie"
      url: "https://example.com/sentosa"
-     url-alt: "Visit Sentosa"
+     url-alt: "Visit Normandie"
    description: The giant zipline at Skypark Normandie, known as the 'Scable,' is the ideal activity to start exploring your limits. This activity will give you a taste of the unique sensations that we offer on-site and is also the best way to discover our valley and its amazing flora and fauna. Starting from a specially designed launch area, you will be released onto our 400m cable at speeds reaching 100 km/h, where you, by yourself or with your partner, will get a great introduction to our adrenaline-packed activities.
  - name: Skybridge & Skycube
    id: "skybridge" 
@@ -109,12 +130,9 @@ experience:
    - img-url: /images/temp-img.jpg
      img-alt:
    locations: 
-   - name: "Cairns"
-     url: "https://example.com/cairns"
-     url-alt: "Visit Cairns"
-   - name: "Sentosa"
+   - name: "Normandie"
      url: "https://example.com/sentosa"
-     url-alt: "Visit Sentosa"
+     url-alt: "Visit Normandie"
    description: For more than 30 years, AJ Hackett has created many thrilling activities from this 140-meter-long footbridge. The skybridge is both the access point to the activities of Skypark Normandie and a unique place to be as close as possible to the practitioners who come here to take on many challenges. At the entrance, you can enjoy a terrace to watch the departure of the giant zip line. As you advance on the footbridge, you must gradually master the void that presents itself beneath your feet—10, 20, 30, and then 60 meters of emptiness to arrive at the second pile of the viaduct. At 140 meters, it can feel long when, with each step, you have to control your fear of heights. But in the end, it is the promise of a unique point of view of the Souleuvre valley—a 360-degree panorama of this preserved and protected nature.
  - name: Walk The Plank
    id: "walktheplank" 
@@ -137,9 +155,6 @@ experience:
    - name: "Cairns"
      url: "https://example.com/cairns"
      url-alt: "Visit Cairns"
-   - name: "Sentosa"
-     url: "https://example.com/sentosa"
-     url-alt: "Visit Sentosa"
    description: As in the olden days, try yourself by walking the plank, perched 50 m in the air and 140 m above sea level, with amazing views of the ocean and rainforest. This activity is the perfect way to introduce yourself to heights. Our team will guide you along the way to help you push your boundaries. If you’re confident enough, we will let you dangle over the edge of the plank for the perfect photo opportunity!
  - name: Luge
    id: "luge" 
@@ -159,12 +174,9 @@ experience:
    - img-url: /images/temp-img.jpg
      img-alt:
    locations: 
-   - name: "Cairns"
-     url: "https://example.com/cairns"
-     url-alt: "Visit Cairns"
-   - name: "Sentosa"
+   - name: "Normandie"
      url: "https://example.com/sentosa"
-     url-alt: "Visit Sentosa"
+     url-alt: "Visit Normandie"
    description: A unique sled with speeds up to 45 km/h. Sledding is a simple, family-friendly, low-cost pleasure, ideal for both summer and winter. A leisure activity that brings you great sliding sensations without effort, sledding can be practiced alone or in pairs. It can be enjoyed from 3 years old and accommodates individuals weighing up to 180 kg. Make your way down the valley for a fun-filled experience immersed in the Natura 2000 protected area; you may see a cow or two in the adjacent pastures!
  - name: Adventure Parks
    id: "adventureparks" 
@@ -184,12 +196,9 @@ experience:
    - img-url: /images/temp-img.jpg
      img-alt:
    locations: 
-   - name: "Cairns"
-     url: "https://example.com/cairns"
-     url-alt: "Visit Cairns"
-   - name: "Sentosa"
+   - name: "Normandie"
      url: "https://example.com/sentosa"
-     url-alt: "Visit Sentosa"
+     url-alt: "Visit Normandie"
    description: "The perfect activity for all ages, with multi-leveled courses, allows you to challenge yourself through different obstacles ranging from mini ziplines to roped walkways and climbing challenges. We offer two types of adventure parks: the original, where you are harnessed the whole way through the activities, or the new generation, which is netted! This means no harness is needed—just your own bravery as you try to complete the challenges ahead!"
  - name: Climbing Walls
    id: "climbingwalls" 
@@ -209,12 +218,9 @@ experience:
    - img-url: /images/temp-img.jpg
      img-alt:
    locations: 
-   - name: "Cairns"
-     url: "https://example.com/cairns"
-     url-alt: "Visit Cairns"
-   - name: "Sentosa"
+   - name: "Normandie"
      url: "https://example.com/sentosa"
-     url-alt: "Visit Sentosa"
+     url-alt: "Visit Normandie"
    description: "Challenge yourself by climbing on our World Cup-sized walls, where all levels of difficulty are on display for you to try out! Our team of trained operators will ensure you give it your best while keeping you safe during your climb with the use of harnesses and all relevant equipment."
 ---
 
@@ -278,7 +284,7 @@ experience:
 
 <!-----Experiences-------->
 
-<section class="px-5p">
+<section class="px-5p pb-10p">
     {% for item in page.experience %}
     <div class="pt-10p" id="{{ item.id }}">
         <h3 class="title-font text-4xl pb-1p">{{ item.name }}</h3>
