--- a/contact.html
+++ b/contact.html
@@ -48,22 +48,75 @@ header:
         </div>
     </div>
 
-    <div class="col-span-full mt-10p">
+    <div class="col-span-full my-10p">
         <p class="title-font text-3xl mb-5p">Our Locations</p>
-        <ul class="space-y-4">
-            <li>
-                <p class="text-lg font-medium">Main Office</p>
-                <p class="text-sm text-gray-600">1234 Main Street, Suite 100<br>City, State, ZIP</p>
+        <ul class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
+            <li class="p-5p bg-grey rounded-md">
+                <p class="text-lg font-medium pb-2p">International Office</p>
+                    <p>Address:<br>
+                        <span class="pl-4">End of McGregor Rd </span><br>
+                        <span class="pl-4">Smithfield QLD 4878  </span><br>
+                        <span class="pl-4">Australia  </span>
+                    </p>
+                    <a href="tel:+61473733699" class="block mt-2" aria-label="Call us">Call <span class="contact-dark-blue">+61 473 733 699</span></a>
+                    <a href="mailto:international@ajhackett.com" class="block mt-1" aria-label="Send us an email">Email <span class="contact-dark-blue">international@ajhackett.com</span></a>
             </li>
-            <li>
-                <p class="text-lg font-medium">Branch Office</p>
-                <p class="text-sm text-gray-600">5678 Another Road, Suite 200<br>City, State, ZIP</p>
+            <li class="p-5p bg-grey rounded-md">
+                <p class="text-lg font-medium pb-2p">Skypark Cairns</p>
+                <p>Address:<br>
+                    <span class="pl-4">End of McGregor Rd </span><br>
+                    <span class="pl-4">Smithfield QLD 4878  </span><br>
+                    <span class="pl-4">Australia  </span>
+                </p>
+                <a href="tel:+61740577188" class="block mt-2" aria-label="Call us">Call <span class="contact-dark-blue">+61 7 4057 7188</span></a>
+                <a href="" class="block mt-1" aria-label="Reach Cairns via their contact form">You can also reach Cairns via their contact form <span class="contact-dark-blue">here</span></a>
             </li>
-            <li>
-                <p class="text-lg font-medium">Regional Office</p>
-                <p class="text-sm text-gray-600">91011 Yet Another Ave<br>City, State, ZIP</p>
+            <li class="p-5p bg-grey rounded-md">
+                <p class="text-lg font-medium pb-2p">Skypark Sentosa</p>
+                <p>Address:<br>
+                    <span class="pl-4">30 Siloso Beach Walk </span><br>
+                    <span class="pl-4">Sentosa Island  </span><br>
+                    <span class="pl-4">Singapore  </span>
+                </p>
+                <a href="tel:+6569113070" class="block mt-2" aria-label="Call us">Call <span class="contact-dark-blue">+65 6911 3070</span></a>
+                <a href="" class="block mt-1" aria-label="Reach Sentosa via their contact form">You can also reach Sentosa via their contact form <span class="contact-dark-blue">here</span></a>
+            </li>
+            <li class="p-5p bg-grey rounded-md">
+                <p class="text-lg font-medium pb-2p">Skypark Macau</p>
+                <p>Address:<br>
+                    <span class="pl-4">Level T2</span><br>
+                    <span class="pl-4">Adventure Zone Macau Tower </span><br>
+                    <span class="pl-4">Macau 999078  </span><br>
+                    <span class="pl-4">SAR China </span>
+                </p>
+                <a href="tel:+85389888656" class="block mt-2" aria-label="Call us">Call <span class="contact-dark-blue">+853 8988 8656</span></a>
+                <a href="" class="block mt-1" aria-label="Reach Macau via their contact form">You can also reach Macau via their contact form <span class="contact-dark-blue">here</span></a>
+            </li>
+            <li class="p-5p bg-grey rounded-md">
+                <p class="text-lg font-medium pb-2p">Skypark Normandie</p>
+                <p>Address:<br>
+                    <span class="pl-4">Souleuvre Viaduct</span><br>
+                    <span class="pl-4">2 Chem. du Viaduc </span><br>
+                    <span class="pl-4">14350 Souleuvre en Bocage </span>
+                    <span class="pl-4">France</span>
+                </p>
+                <a href="tel:+33231663166" class="block mt-2" aria-label="Call us">Call <span class="contact-dark-blue">+33 2 31 66 31 66</span></a>
+                <a href="" class="block mt-1" aria-label="Reach Normandie via their contact form">You can also reach Normandie via their contact form <span class="contact-dark-blue">here</span></a>
+            </li>
+            <li class="p-5p bg-grey rounded-md">
+                <p class="text-lg font-medium pb-2p">Pondok Santi Estate</p>
+                <p>Address:<br>
+                    <span class="pl-4">Dusun Gili Trawangan, Gili Indah</span><br>
+                    <span class="pl-4">Kec. Pemenang</span><br>
+                    <span class="pl-4">Kabupaten Lombok Utara</span><br>
+                    <span class="pl-4">Nusa Tenggara Bar. 83352 </span><br>
+                    <span class="pl-4">Indonesia</span>
+                </p>
+                <a href="tel:+6281907057504" class="block mt-2" aria-label="Call us">Call <span class="contact-dark-blue">+62 819 0705 7504</span></a>
+                <a href="" class="block mt-1" aria-label="Reach Pondok Santi Estate via their contact form">You can also reach Pondok Santi Estate via their contact form <span class="contact-dark-blue">here</span></a>
             </li>
         </ul>
     </div>
+    
 
 </section>
